Added HTML structure

--- a/index.html
+++ b/index.html
@@ -27,6 +27,60 @@
     <title>Article Preview Component</title>
   </head>
   <body>
-    Article Preview Component
+    <main>
+      <div class="card-header">
+        <div class="card-img-wrapper">
+          <img src="./images/drawers.jpg" alt="drawers image" />
+        </div>
+      </div>
+      <div class="card-content">
+        <h1 class="card-title">
+          Shift the overall look and feel by adding these wonderful touches to
+          furniture in your home
+        </h1>
+        <p class="card-desc">
+          Ever been in a room and felt like something was missing? Perhaps it
+          felt slightly bare and uninviting. I've got some simple tips to help
+          you make any room feel complete.
+        </p>
+      </div>
+      <div class="card-footer">
+        <div class="user">
+          <div class="user-img-wrapper">
+            <img src="./images/avatar-michelle.jpg" alt="user image" />
+          </div>
+          <div class="user-info">
+            <h2 class="user-name">Michelle Appleton</h2>
+            <p class="date">28 Jun 2020</p>
+          </div>
+          <button id="share-btn" class="share-btn">
+            <img src="./images/icon-share.svg" alt="share icon" />
+          </button>
+        </div>
+        <div class="share-overlay">
+          <p class="share-text">Share</p>
+          <ul class="social-icons-list">
+            <li class="social-icons-item">
+              <button id="share-facebook" class="share-icon-button">
+                <img src="./images/icon-facebook.svg" alt="facebook icon" />
+              </button>
+            </li>
+            <li class="social-icons-item">
+              <button id="share-twitter" class="share-icon-button">
+                <img src="./images/icon-twitter.svg" alt="twitter icon" />
+              </button>
+            </li>
+            <li class="social-icons-item">
+              <button id="share-pinterest" class="share-icon-button">
+                <img src="./images/icon-pinterest.svg" alt="pinterest icon" />
+              </button>
+            </li>
+          </ul>
+          <button id="share-btn" class="share-btn">
+            <img src="./images/icon-share.svg" alt="share icon" />
+          </button>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
