changed class on overlay share button to target for filter

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   </button>
                 </li>
               </ul>
-              <button id="share-btn" class="share-btn">
+              <button id="share-btn" class="overlay-share-btn">
                 <img src="./images/icon-share.svg" alt="share icon" />
               </button>
             </div>
