--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>Article Preview Component</title>
+    <script defer src="main.js"></script>
   </head>
   <body>
     <main>
