changed overlay share button id

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </button>
                   </li>
                 </ul>
-                <button id="share-btn" class="overlay-share-btn">
+                <button id="overlay-share-btn" class="overlay-share-btn">
                   <img src="./images/icon-share.svg" alt="share icon" />
                 </button>
               </div>
